# materials

./: .gitignore  Handling Exceptions.md  LICENSE  Movies.json  Notebook_A.ipynb  Notebook_B.ipynb  Population Ascending.ipynb  Population Changes.ipynb  Population Chart.ipynb  Population Data.ipynb  README.md  Source Data.ipynb  Ten_Bond_Movies.csv  data analysis results.ipynb  data_analysis_findings.ipynb  james_bond_data.json  james_bond_data_cleansed.csv  number_input_examples.py  pyproject.toml  range type.md  requirements.txt  setup.cfg  tic_tac_toe_ui.py  tic_tac_toe_ui_updates.py  tutorial_code.ipynb  word_counter.py
arcade-platformer/: .directory  Pipfile  README.md  pyproject.toml  readme.md  requirements.txt
arcade-platformer/arcade_platformer/: 01_game_outline.py  01_game_skeleton.py  02_basic_implementation.py  02_open_game_window.py  03_read_level_one.py  03_score_and_joystick_implementation.py  04_define_player.py  04_views_implementation.py  05_update_and_draw.py  06_keyboard_movement.py  07_scrolling_view.py  08_on_screen_score.py  09_joystick_control.py  10_view_conversion.py  11_title_view.py  12_instructions_view.py  13_pause_view.py  14_enemies.py  15_moving_platforms.py  arcade_platformer.py  constants.py
arcade-platformer/assets/: arcade_platformer.tsx  arcade_platformer_temp.tsx  platform_level_01.tmx  platform_level_02.tmx  platform_level_02_start.tmx  platform_level_03.tmx  platform_level_04.tmx
arcade-platformer/assets/images/: instructions_image.xcf  title_image.xcf
arcade-platformer/tests/: test_arcade_platformer.py
codex-cli/rpcontacts/: README.md  pyproject.toml
docker-continuous-integration/web/: Dockerfile  Dockerfile.dev  constraints.txt  pyproject.toml
docker-continuous-integration/web/test/: conftest.py
game-of-life-python/source_code_step_7/: pyproject.toml
gemini-cli/todolist/: pyproject.toml
hangman/: README.md  pyproject.toml  readme.md
hangman/hangman/: hangman_basic.py  psg_hangman.py  psg_hangman_advanced.py  word_list.txt
hangman/tests/: test_hangman.py
huggingface-transformers/: README.md  auto_classes.py  gpus_google_colab.ipynb  ideation.ipynb  pyproject.toml  requirements.txt  running_pipelines.py
langchain-rag-app/chatbot_api/: Dockerfile  pyproject.toml
langchain-rag-app/chatbot_api/src/: main.py
langchain-rag-app/source_code_final/chatbot_api/: Dockerfile  pyproject.toml
langchain-rag-app/source_code_step_4/chatbot_api/: pyproject.toml
prompt-engineering/: LICENSE  README.md  app.py  chats.txt  final-settings.toml  pyproject.toml  requirements.txt  sanitized-chats.txt  sanitized-testing-chats.txt  settings-final.toml  settings.toml  support-chat.txt  testing-chats.txt
prompt-engineering/src/bleach/: __main__.py  app.py  cli.py  settings.toml
python-argparse/hello_cli/: README.md  pyproject.toml
python-argparse/hello_cli/hello_cli/: __init__.py  __main__.py  cli.py  model.py
python-argparse/hello_cli/tests/: __init__.py  test_cli.py  test_model.py
python-bitwise-operators/: .example.bmp.icloud  README.md  pyproject.toml
python-bitwise-operators/src/stegano/: __main__.py  bitmap.py  cli.py  decoder.py  encoder.py  eraser.py
python-bitwise-operators/stegano/: __main__.py  bitmap.py  decoder.py  encoder.py  eraser.py
python-click/calc_v4/: README.md  pyproject.toml
python-click/calc_v4/calc/: __main__.py  commands.py
python-email/: README.md  address-email.py  attachment-email.py  csv_email.py  html-email.py  pyproject.toml  requirements.txt
python-guitar-synthesizer/source_code_final/: README.md  pyproject.toml
python-guitar-synthesizer/source_code_final/demo/: play_diablo.py
python-guitar-synthesizer/source_code_final/tests/: test_burst.py  test_chord.py  test_instrument.py  test_models.py  test_pitch.py  (+5 more)
python-guitar-synthesizer/source_code_step_5/: pyproject.toml
python-langgraph/: README.md  example_emails.py  pyproject.toml  requirements.txt
python-langgraph/chains/: binary_questions.py  escalation_check.py  notice_extraction.py
python-langgraph/graphs/: email_agent.py  notice_extraction.py
python-langgraph/utils/: graph_utils.py  logging_config.py
python-mcp-client/source-code-final/: README.md  pyproject.toml
python-pyproject-toml/snakesay-project/: .gitignore  LICENSE  README.md  pyproject.toml
python-selenium/: README.md  pyproject.toml  requirements.txt
python-selenium/training/: communication.py  interaction.py  navigation.py  observation.py
python-send-email/: README.md  address_email.py  attachment_email.py  contacts.csv  html_email.py  multiple_recipients.py  plain_text_email.py  proton_example.py  pyproject.toml  reply_to_email.py  requirements.txt  send_msg.py  yagmail_example.py
python-uv/: README.md  main.py  pyproject.toml
selenium-web-automation/bandcamp_player/: pyproject.toml
textual-showcase/: # Python Textual - Build Beautiful UIs i.md  README.md  pyproject.toml  textual_outline_1.md
textual-showcase/textual-showcase/: actions.py  actions_and_events.py  actions_and_events.tcss  binary_calculator.py  binary_calculator.tcss  buttons_and_inputs.py  buttons_and_inputs.tcss  calcmenu.py  calcmenu.tcss  events.py  events.tcss  grid.py  grid_with_tcss.py  grids.py  grids.tcss  hello-textual.py  horizontal_layout.py  horizontal_layout.tcss  horizontal_layout_tcss.py  horizontal_scroll.py  jabberwocky.py  labels_and_buttons.py  labels_and_buttons.tcss  layouts.py  layouts.tcss  multi_layout.py  multi_layout.tcss  placeholder.py  placeholder.tcss  progress_bar.py  progress_bar.tcss  simple_layout.py  simple_layout.tcss  simple_layout_with_tcss.py  simple_styles.py  static_and_label.py  static_and_label.tcss  static_and_label_tcss.py  tabbed_layout.py  tabbed_layout_1.py  (+5 more)
top-python-game-engines/adventurelib_sample/: pyproject.toml  requirements.txt
top-python-game-engines/arcade_sample/: pyproject.toml  requirements.txt
top-python-game-engines/pygame_sample/: pyproject.toml  requirements.txt
top-python-game-engines/pygame_zero_sample/: pyproject.toml  requirements.txt
top-python-game-engines/renpy_sample/: pyproject.toml
(+5173 files in other folders)
