[tool.poetry]
name = "arcade-platformer"
version = "0.1.0"
description = "Platform game using arcade"
authors = ["Jon Fincher <jfincher42@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
arcade = "^2.3"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
flake8 = "^3.7.8"
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
