[tool.poetry]
name = "arcade-platformer"
version = "0.1.0"
description = "Platform game using Arcade library"
authors = ["Jon Fincher <jfincher42@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
arcade = "^2.5.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
rope = "^0.18.0"
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
