[tool.poetry]
name = "huggingface-transformers"
version = "0.1.0"
description = ""
authors = ["hfhoffman1144 <hfh160130@utdallas.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
accelerate = "^0.32.1"
ipywidgets = "^8.1.3"
notebook = "^7.2.1"
pillow = "^10.4.0"
polars = "^1.2.0"
torch = "^2.3.1"
transformers = "^4.42.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
