[project]
name = "python-email"
version = "0.1.0"
description = "Source files supporting 'Sending Emails with Python' article on RealPython"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtpd>=1.4.6",
    "ruff>=0.15.9",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "rope>=1.14.0",
]
