[project]
name = "python-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "langchain-openai>=0.3.2",
    "langgraph>=0.2.67",
    "pydantic[email]>=2.10.6",
    "ruff>=0.9.3",
]
