[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bandcamp_player"
version = "0.1.0"
requires-python = ">=3.10"
description = "A web player for Bandcamp using Selenium"
authors = [
    { name = "Martin Breuss", email = "martin@realpython.com" },
    { name = "Bartosz Zaczyński", email = "bartosz@realpython.com" },
]
dependencies = [
    "selenium",
]
[project.scripts]
discover = "bandcamp.__main__:main"
