[build-system]
requires = ["uv_build>=0.9.5"]
build-backend = "uv_build"

[project]
name = "todolist"
version = "0.1.0"
description = "A command-line todo app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.6.1",
    "peewee>=3.18.2",
    "platformdirs>=4.5.0",
    "rich>=14.2.0",
]

[project.scripts]
todo = "todolist.__main__:main"
