[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "fastapi==0.136.3",
    "langchain==1.3.4",
    "langchain-openai==1.2.2",
    "langchain-neo4j==0.9.0",
    "neo4j==6.2.0",
    "numpy==2.4.6",
    "openai==2.41.0",
    "pydantic==2.13.4",
    "uvicorn==0.49.0"
]

[project.optional-dependencies]
dev = ["ruff"]
